@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-13T08:10:13Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-08-13T16:09:06Z",
+  "count" : 7,
+  "count_minmax" : [ 2, 7 ],
+  "count_decinc" : [ -0, +7 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
