@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-13T08:10:13Z",
+  "timestamp" : "2022-08-13T16:09:06Z",
   "count_outdated" : 1803,
   "uniques_outdated" : 125,
-  "count" : 1898,
+  "count" : 1903,
   "uniques" : 135,
   "views" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 7,
+      "count_minmax": [ 2, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
